--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@types/node": "^20.2.5",
@@ -18,6 +19,7 @@
     "blitz": "^2.0.0-beta.31",
     "clipboard": "^2.0.11",
     "framer-motion": "^10.16.14",
+    "gsap": "^3.12.5",
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
