--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "sharp": "^0.32.4",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "web-vitals": "^3.5.2"
   }
 }
