--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
     "@types/node": "^20.2.5",
