--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
     "blitz": "^2.0.0-beta.31",
@@ -23,17 +21,19 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23",
-    "typescript": "^5.0.4"
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/aos": "^3.0.4",
+    "@types/node": "20.12.2",
+    "@types/react": "18.2.73",
     "@types/svgo": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "sharp": "^0.32.4",
     "tailwindcss": "^3.3.2",
+    "typescript": "5.4.3",
     "web-vitals": "^3.5.2"
   }
 }
