--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.13",
+    "@mui/material-nextjs": "^5.15.11",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
     "blitz": "^2.0.0-beta.31",
