adding the branch change
Signed-off-by: Aditya-eddy <aditya282003@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deployment Workflow
 on:
   push:
     branches:
-      - creatingGithubActions
-
+      - main
+   
 jobs:
   deploy:
     runs-on: ubuntu-latest
