--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
