Adding basic-structure for auto-test-Generation
Signed-off-by: Aditya-eddy <aditya282003@gmail.com>

--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
+    "@react-icons/all-files": "^4.1.0",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -29,6 +34,7 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
