--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
     "blitz": "^2.0.0-beta.31",
@@ -32,8 +34,8 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/aos": "^3.0.4",
-    "@types/node": "20.12.2",
-    "@types/react": "18.2.73",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
     "@types/svgo": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
