--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
