--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
@@ -29,6 +30,7 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
