--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
@@ -25,11 +27,13 @@
     "blitz": "^2.0.0-beta.31",
     "clipboard": "^2.0.11",
     "framer-motion": "^10.16.14",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.16.0",
     "gsap": "^3.12.5",
     "next": "^13.4.12",
     "react": "^18.2.0",
-    "react-icons": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
