--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.13",
+    "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
@@ -29,7 +33,8 @@
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
@@ -39,7 +44,7 @@
     "@types/svgo": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "sharp": "^0.32.4",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.3.2",
     "typescript": "5.4.3",
     "web-vitals": "^3.5.2"
