--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "framer-motion": "^10.16.14",
     "gsap": "^3.12.5",
     "next": "^14.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "node": "^22.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.1"
   },
