--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-swipeable": "^7.0.1"
+    "react-swipeable": "^7.0.1",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
