chore: add eslinter, remove duplicate code
Signed-off-by: Neha Gupta <gneha21@yahoo.in>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,13 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
