--- a/package.json
+++ b/package.json
@@ -37,16 +37,21 @@
     "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/aos": "^3.0.4",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/svgo": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0",
     "postcss": "^8.4.24",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.3.2",
     "typescript": "5.4.3",
+    "typescript-eslint": "^7.18.0",
     "web-vitals": "^3.5.2"
   }
 }
