--- a/package.json
+++ b/package.json
@@ -28,25 +28,32 @@
     "aos": "^3.0.0-beta.6",
     "blitz": "^2.0.0-beta.31",
     "clipboard": "^2.0.11",
-    "framer-motion": "^10.16.14",
+    "clsx": "^2.1.1",
+    "framer-motion": "^10.18.0",
     "gsap": "^3.12.5",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-swipeable": "^7.0.1"
+    "react-swipeable": "^7.0.1",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/aos": "^3.0.4",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/svgo": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0",
     "postcss": "^8.4.24",
     "sharp": "^0.32.6",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.7",
     "typescript": "5.4.3",
+    "typescript-eslint": "^7.18.0",
     "web-vitals": "^3.5.2"
   }
 }
