--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "aos": "^3.0.0-beta.6",
     "blitz": "^2.0.0-beta.31",
     "clipboard": "^2.0.11",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.14",
     "gsap": "^3.12.5",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-swipeable": "^7.0.1"
+    "react-swipeable": "^7.0.1",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.5.0",
