--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^10.16.14",
     "gsap": "^3.12.5",
     "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
@@ -52,7 +53,7 @@
     "globals": "^15.8.0",
     "postcss": "^8.4.24",
     "sharp": "^0.32.6",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.7",
     "typescript": "5.4.3",
     "typescript-eslint": "^7.18.0",
     "web-vitals": "^3.5.2"
