--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/**/*", "public/images/navBarIcons/*"],
   "exclude": ["node_modules"]
 }
