--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,14 @@ on:
   push:
     branches:
       - main
+
   pull_request:
     types: [opened, edited, synchronize, reopened]
    
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
