--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -20,9 +21,11 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.1.5",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
+    "@next/bundle-analyzer": "^14.2.5",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -31,11 +34,14 @@
     "clipboard": "^2.0.11",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.14",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.16.0",
     "gsap": "^3.12.5",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.1",
     "tailwind-merge": "^2.4.0"
