feat: submodule pipeline
Signed-off-by: Yash Khare <khareyash05@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches:
       - main
-   
+  pull_request:  # Trigger on pull requests
+    branches:
+      - main  # Specify the target branch for the pull request
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
