--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "chmod +x prebuild.sh && ./prebuild.sh",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -27,17 +26,20 @@
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "@next/bundle-analyzer": "^14.2.5",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
     "blitz": "^2.0.0-beta.31",
+    "class-variance-authority": "^0.7.0",
     "clipboard": "^2.0.11",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.14",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.16.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.454.0",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
@@ -54,13 +56,13 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/svgo": "^3.0.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.5.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.47",
     "sharp": "^0.32.6",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.4.3",
     "typescript-eslint": "^7.18.0",
     "web-vitals": "^3.5.2"
