--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-marquee-slider": "^1.1.5",
     "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.1",
     "tailwind-merge": "^2.4.0"
