--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.1",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
