--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,8 +1,8 @@
 name: CI
-on:
-  push:
-    branches:
-      - main
+on: 
+  push: # Triggers on every push
+    branches: # Matches all branches
+      - "**"
 jobs:
   lighthouseci:
     runs-on: ubuntu-latest
