--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Keploy",
+  "name": "keploy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,7 +21,6 @@
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.1.5",
-    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
@@ -43,6 +42,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-lottie-player": "^2.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.1",
     "tailwind-merge": "^2.4.0"
@@ -54,6 +54,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/svgo": "^3.0.0",
+    "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.5.0",
     "eslint-plugin-react": "^7.35.0",
