feat: decrease memory leak
Signed-off-by: Yash Khare <khareyash05@gmail.com>

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.1.5",
+    "@lottiefiles/dotlottie-react": "^0.11.1",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
@@ -42,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.13.1",
     "react-lottie-player": "^2.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.1",
