add necessary global points for lighthouse
Signed-off-by: Yash Khare <khareyash05@gmail.com>

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -20,4 +20,4 @@ jobs:
       - name: run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.14.x
-          lhci autorun
+          lhci autorun --upload.target=temporary-public-storage || echo "LHCI failed!"
