setup default lighthouse ci
Signed-off-by: Yash Khare <khareyash05@gmail.com>

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -13,11 +13,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - name: npm install, build
+      - name: Install dependencies
         run: |
           npm install
-          npm run build
-      - name: run Lighthouse CI
-        run: |
-          npm install -g @lhci/cli@0.14.x
-          lhci autorun --upload.target=temporary-public-storage || echo "LHCI failed!"
+      - name: Audit URLs using Lighthouse
+        uses: treosh/lighthouse-ci-action@v7
+        with:
+          urls: http://localhost:3000
+          budgetPath: ./budget.json
+          uploadArtifacts: true # save results as an action artifacts
+          temporaryPublicStorage: true # upload lighthouse audits to google temporary storage
