--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -17,7 +17,11 @@ jobs:
         run: |
           npm install
           npm run build
-      - name: run Lighthouse CI
+      - name: run Lighthouse CI for the Application
         run: |
           npm install -g @lhci/cli@0.14.x
-          lhci autorun --upload.target=temporary-public-storage || echo "LHCI failed!"
+          lhci autorun --upload.target=temporary-public-storage --config=../.././lighthouserc.json || echo "LHCI failed!"
+      - name: run Lighthouse CI for Deploy Keploy
+        run: |
+          npm install -g @lhci/cli@0.14.x
+          lhci autorun --upload.target=temporary-public-storage --config=../.././lighthouserckeploy.json || echo "LHCI failed!"
