check with routing
Signed-off-by: Yash Khare <khareyash05@gmail.com>

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -20,8 +20,8 @@ jobs:
       - name: run Lighthouse CI for the Application
         run: |
           npm install -g @lhci/cli@0.14.x
-          lhci autorun --upload.target=temporary-public-storage --config=../lighthouserc.json || echo "LHCI failed!"
+          lhci autorun --upload.target=temporary-public-storage --config=lighthouserc.json || echo "LHCI failed!"
       - name: run Lighthouse CI for Deploy Keploy
         run: |
           npm install -g @lhci/cli@0.14.x
-          lhci autorun --upload.target=temporary-public-storage --config=.././lighthouserckeploy.json || echo "LHCI failed!"
+          lhci autorun --upload.target=temporary-public-storage --config=lighthouserckeploy.json || echo "LHCI failed!"
