--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -25,3 +25,6 @@ jobs:
         run: |
           npm install -g @lhci/cli@0.14.x
           lhci autorun --upload.target=temporary-public-storage --config=lighthouserckeploy.json || echo "LHCI failed!"
+      - name: Compare Lighthouse Reports
+        run: |
+          node scripts/compare-lhci-reports.js
