--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -13,18 +13,21 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - name: Install dependencies
-        run: |
-          npm install
-          npm run build
-      - name: run Lighthouse CI for the Application
-        run: |
-          npm install -g @lhci/cli@0.14.x
-          lhci autorun --config=lighthouserc.json || echo "LHCI failed!"
-      - name: run Lighthouse CI for Keploy.io Deployed Website
-        run: |
-          npm install -g @lhci/cli@0.14.x
-          lhci autorun --config=lighthouserckeploy.json || echo "LHCI failed!"
+      # - name: Install dependencies
+      #   run: |
+      #     npm install
+      #     npm run build
+      # - name: run Lighthouse CI for the Application
+      #   run: |
+      #     npm install -g @lhci/cli@0.14.x
+      #     lhci autorun --config=lighthouserc.json || echo "LHCI failed!"
+      # - name: run Lighthouse CI for Keploy.io Deployed Website
+      #   run: |
+      #     npm install -g @lhci/cli@0.14.x
+      #     lhci autorun --config=lighthouserckeploy.json || echo "LHCI failed!"
       - name: Compare Lighthouse Reports
         run: |
+          pwd
+          cd ..
+          pwd
           node compare-lhci-reports.js
