--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -13,30 +13,35 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - name: Install dependencies
-        run: |
-          npm install
-          npm run build
-      - name: run Lighthouse CI for the Application
-        run: |
-          npm install -g @lhci/cli@0.14.x
-          lhci autorun --config=lighthouserc.json 
-      - name: run Lighthouse CI for Keploy.io Deployed Website
-        run: |
-          npm install -g @lhci/cli@0.14.x
-          lhci autorun --config=lighthouserckeploy.json 
+      # - name: Install dependencies
+      #   run: |
+      #     npm install
+      #     npm run build
+      # - name: run Lighthouse CI for the Application
+      #   run: |
+      #     npm install -g @lhci/cli@0.14.x
+      #     lhci autorun --config=lighthouserc.json 
+      # - name: run Lighthouse CI for Keploy.io Deployed Website
+      #   run: |
+      #     npm install -g @lhci/cli@0.14.x
+      #     lhci autorun --config=lighthouserckeploy.json 
+      # After running LHCI for the Application
+      # - name: List Application Reports
+      #   run: ls -la ./lhci-reports/app/latest-run/
+
+      # # After running LHCI for Keploy.io
+      # - name: List Keploy.io Reports
+      #   run: ls -la ./lhci-reports/keploy.io/latest-run/
       - name: Compare Lighthouse Reports
         run: |
+          ls
+          echo "Comparing Lighthouse Reports"
+          cd scripts
+          ls
+          echo "check 2"
           node scripts/compare-lhci-reports.js
       - name: Upload Lighthouse Reports
         uses: actions/upload-artifact@v3
         with:
           name: lhci-reports
           path: ./lhci-reports
-      # After running LHCI for the Application
-      - name: List Application Reports
-        run: ls -la ./lhci-reports/app/latest-run/
-
-      # After running LHCI for Keploy.io
-      - name: List Keploy.io Reports
-        run: ls -la ./lhci-reports/keploy.io/latest-run/
