make script inside
Signed-off-by: Yash Khare <khareyash05@gmail.com>

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -41,7 +41,9 @@ jobs:
           ls
           pwd
           echo "check 2"
-          node scripts/compare-lhci-reports.js
+          cd ..
+          pwd
+          node compare-lhci-reports.js
       - name: Upload Lighthouse Reports
         uses: actions/upload-artifact@v3
         with:
