--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -13,25 +13,25 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      # - name: Install dependencies
-      #   run: |
-      #     npm install
-      #     npm run build
-      # - name: run Lighthouse CI for the Application
-      #   run: |
-      #     npm install -g @lhci/cli@0.14.x
-      #     lhci autorun --config=lighthouserc.json 
-      # - name: run Lighthouse CI for Keploy.io Deployed Website
-      #   run: |
-      #     npm install -g @lhci/cli@0.14.x
-      #     lhci autorun --config=lighthouserckeploy.json 
-      # After running LHCI for the Application
-      # - name: List Application Reports
-      #   run: ls -la ./lhci-reports/app/latest-run/
+      - name: Install dependencies
+        run: |
+          npm install
+          npm run build
+      - name: run Lighthouse CI for the Application
+        run: |
+          npm install -g @lhci/cli@0.14.x
+          lhci autorun --config=lighthouserc.json 
+      - name: run Lighthouse CI for Keploy.io Deployed Website
+        run: |
+          npm install -g @lhci/cli@0.14.x
+          lhci autorun --config=lighthouserckeploy.json 
+      After running LHCI for the Application
+      - name: List Application Reports
+        run: ls -la ./lhci-reports/app/latest-run/
 
-      # # After running LHCI for Keploy.io
-      # - name: List Keploy.io Reports
-      #   run: ls -la ./lhci-reports/keploy.io/latest-run/
+      # After running LHCI for Keploy.io
+      - name: List Keploy.io Reports
+        run: ls -la ./lhci-reports/keploy.io/latest-run/
       - name: Compare Lighthouse Reports
         run: |
           pwd
