--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -25,27 +25,26 @@ jobs:
         run: |
           npm install -g @lhci/cli@0.14.x
           lhci autorun --config=lighthouserckeploy.json 
-      After running LHCI for the Application
       - name: List Application Reports
         run: ls -la ./lhci-reports/app/latest-run/
 
-      # After running LHCI for Keploy.io
       - name: List Keploy.io Reports
         run: ls -la ./lhci-reports/keploy.io/latest-run/
-      - name: Compare Lighthouse Reports
-        run: |
-          pwd
-          ls
-          echo "Comparing Lighthouse Reports"
-          cd scripts
-          ls
-          pwd
-          echo "check 2"
-          cd ..
-          pwd
-          node compare-lhci-reports.js
-      - name: Upload Lighthouse Reports
-        uses: actions/upload-artifact@v3
-        with:
-          name: lhci-reports
-          path: ./lhci-reports
+      # - name: Compare Lighthouse Reports
+      #   run: |
+      #     pwd
+      #     ls
+      #     echo "Comparing Lighthouse Reports"
+      #     node compare-lhci-reports.js
+      # - name: Upload Lighthouse Reports
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: lhci-reports
+      #     path: ./lhci-reports
+      # # After running LHCI for the Application
+      # - name: List Application Reports
+      #   run: ls -la ./lhci-reports/app/latest-run/
+
+      # # After running LHCI for Keploy.io
+      # - name: List Keploy.io Reports
+      #   run: ls -la ./lhci-reports/keploy.io/latest-run/
