--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -29,6 +29,19 @@ jobs:
         run: |
           pwd
           ls
+          echo "Listing Application Reports"
+          cd lhci-reports
+          ls
+          echo "Listing Application Reports1223"
+          cd app
+          ls
+          echo "Listing Application Report343"
+          cd ..
+          cd keploy.io
+          ls
+          echo "Listing Application Report78"
+          cd ..
+          cd ..
           ls -la ./lhci-reports/app/latest-run/
 
       - name: List Keploy.io Reports
