--- a/package.json
+++ b/package.json
@@ -1,71 +1,79 @@
 {
-  "name": "keploy",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "prebuild": "chmod +x prebuild.sh && ./prebuild.sh",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.10.4",
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@gsap/react": "^2.1.0",
-    "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.1.5",
-    "@lottiefiles/dotlottie-react": "^0.11.1",
-    "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.15",
-    "@mui/material-nextjs": "^5.15.11",
-    "@next/bundle-analyzer": "^14.2.5",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "aos": "^3.0.0-beta.6",
-    "blitz": "^2.0.0-beta.31",
-    "clipboard": "^2.0.11",
-    "clsx": "^2.1.1",
-    "framer-motion": "^10.16.14",
-    "graphql": "^16.8.1",
-    "graphql-ws": "^5.16.0",
-    "gsap": "^3.12.5",
-    "next": "^14.2.3",
-    "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.13.1",
-    "react-lottie-player": "^2.1.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-swipeable": "^7.0.1",
-    "tailwind-merge": "^2.4.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^8.5.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/aos": "^3.0.4",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/svgo": "^3.0.0",
-    "@welldone-software/why-did-you-render": "^8.0.3",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.5.0",
-    "eslint-plugin-react": "^7.35.0",
-    "globals": "^15.8.0",
-    "postcss": "^8.4.24",
-    "sharp": "^0.32.6",
-    "tailwindcss": "^3.4.7",
-    "typescript": "5.4.3",
-    "typescript-eslint": "^7.18.0",
-    "web-vitals": "^3.5.2"
-  }
+     "name": "keploy",
+     "version": "0.1.0",
+     "private": true,
+     "scripts": {
+          "dev": "next dev",
+          "prebuild": "chmod +x prebuild.sh && ./prebuild.sh",
+          "build": "next build",
+          "start": "next start",
+          "lint": "next lint",
+          "test:keploy": "jest --coverage --config='{\"testEnvironment\":\"jsdom\",\"transform\":{\"^.+\\\\.(js|jsx|ts|tsx)$\":[\"@swc/jest\",{\"jsc\":{\"parser\":{\"syntax\":\"typescript\",\"tsx\":true,\"dynamicImport\":true},\"transform\":{\"react\":{\"runtime\":\"automatic\"}}},\"module\":{\"type\":\"commonjs\"}}]},\"moduleFileExtensions\":[\"js\",\"jsx\",\"ts\",\"tsx\"],\"coveragePathIgnorePatterns\":[\"/monaco-editor/\"],\"collectCoverageFrom\":[\"./**/*.{js,jsx,ts,tsx}\"],\"coverageDirectory\":\".\",\"coverageReporters\":[\"text\",\"cobertura\"]}'"
+     },
+     "dependencies": {
+          "@apollo/client": "^3.10.4",
+          "@emotion/cache": "^11.11.0",
+          "@emotion/react": "^11.11.4",
+          "@emotion/styled": "^11.11.5",
+          "@fortawesome/fontawesome-svg-core": "^6.5.2",
+          "@fortawesome/free-brands-svg-icons": "^6.5.2",
+          "@fortawesome/free-solid-svg-icons": "^6.5.2",
+          "@fortawesome/react-fontawesome": "^0.2.0",
+          "@gsap/react": "^2.1.0",
+          "@headlessui/react": "^1.7.14",
+          "@heroicons/react": "^2.1.5",
+          "@lottiefiles/dotlottie-react": "^0.11.1",
+          "@monaco-editor/react": "^4.6.0",
+          "@mui/icons-material": "^5.15.14",
+          "@mui/material": "^5.15.15",
+          "@mui/material-nextjs": "^5.15.11",
+          "@next/bundle-analyzer": "^14.2.5",
+          "@types/node": "^20.2.5",
+          "@types/react": "^18.2.7",
+          "@types/react-dom": "^18.2.4",
+          "aos": "^3.0.0-beta.6",
+          "blitz": "^2.0.0-beta.31",
+          "clipboard": "^2.0.11",
+          "clsx": "^2.1.1",
+          "framer-motion": "^10.16.14",
+          "graphql": "^16.8.1",
+          "graphql-ws": "^5.16.0",
+          "gsap": "^3.12.5",
+          "next": "^14.2.3",
+          "next-themes": "^0.3.0",
+          "react": "^18.2.0",
+          "react-dom": "^18.2.0",
+          "react-icons": "^5.0.1",
+          "react-intersection-observer": "^9.13.1",
+          "react-lottie-player": "^2.1.0",
+          "react-responsive-carousel": "^3.2.23",
+          "react-swipeable": "^7.0.1",
+          "tailwind-merge": "^2.4.0"
+     },
+     "devDependencies": {
+          "@eslint/js": "^8.5.0",
+          "@swc/core": "^1.10.8",
+          "@swc/jest": "^0.2.37",
+          "@tailwindcss/forms": "^0.5.3",
+          "@testing-library/dom": "^10.4.0",
+          "@testing-library/jest-dom": "^6.6.3",
+          "@testing-library/react": "^16.2.0",
+          "@types/aos": "^3.0.4",
+          "@types/node": "20.2.5",
+          "@types/react": "18.2.7",
+          "@types/svgo": "^3.0.0",
+          "@welldone-software/why-did-you-render": "^8.0.3",
+          "autoprefixer": "^10.4.14",
+          "eslint": "^8.5.0",
+          "eslint-plugin-react": "^7.35.0",
+          "globals": "^15.8.0",
+          "jest": "^29.7.0",
+          "jest-environment-jsdom": "^29.7.0",
+          "postcss": "^8.4.24",
+          "sharp": "^0.32.6",
+          "tailwindcss": "^3.4.7",
+          "typescript": "5.4.3",
+          "typescript-eslint": "^7.18.0",
+          "web-vitals": "^3.5.2"
+     }
 }
