chore: testing url redirection
Signed-off-by: manasmanohar <21006907+manasmanohar@users.noreply.github.com>

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/",
+      "destination": "https://keploy-agent.vercel.app"
+    },
+    {
       "source": "/blog",
       "destination": "https://blog-website-phi-eight.vercel.app/blog"
     },
