--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.5.0",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/aos": "^3.0.4",
     "@types/node": "20.2.5",
